--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -10,19 +10,16 @@
   <title>RegisterFO</title>
 
   <style>
-    form{
-      background-color: azure;
-    }
-
     .card {
-      border-radius: 130px;
       margin-bottom: 20px;
+      margin-top: 20px;
     }
 
     .h1 {
       font-family: Arial, Helvetica, sans-serif;
       font-size: xx-small;
     }
+
     .image {
       background-image: url("/image/farmland.jpg");
       /* The image used */
@@ -37,10 +34,17 @@
       /* Resize the background image to cover the entire container */
       background-attachment: fixed;
     }
-    header{
-      text-align: center ;
-      font-style: italic;
-      padding-top: 10px;
+
+    fieldset {
+      background-color: azure;
+    }
+
+    legend {
+      background-color: rgb(128, 128, 128);
+      color: rgb(15, 15, 15);
+    }
+    .button {
+      margin-top: 10px;
     }
   </style>
 
@@ -51,101 +55,108 @@
   <div w3-include-html="/includes/navbar.html"></div>
   <!-- nav bar ends here -->
   <div class="image">
-    <header>
-      <h6>Note:This form is to be filled in by the agricultural officer </h6>
-    </header>
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card" style="position: relative;">
           <div class="card-body">
-            <form id="regform" action="#" onsubmit="return validate (event)" method="post">
-              <div class="form-group">
-                <label>First name:</label>
-                <input type="text" class="form-control" name="firstname" id="fName">
-                <small id="fNameErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Second name:</label>
-                <input type="text" class="form-control" name="secondname" id="sName">
-                <small id="sNameErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Date of birth:</label>
-                <input type="date" class="form-control" name="dob" id="db">
-                <small id="dbErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Gender:</label>
-                <label class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="gender" id="male"><span>Male</span>
-                </label>
-                <label class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="gender" id="female"><span>Female</span>
-                </label>
-                <small id="gndErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Phone number:</label>
-                <input type="text" class="form-control" name="phone number" id="pNum">
-                <small id="pNumErr"></small>
-              </div>
-              <div class="form-group">
-                <label>NIN:</label>
-                <input type="text" class="form-control" name="NIN" id="nin">
-                <small id="ninErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Address</label>
-                <input type="text" class="form-control" name="address" id="adr">
-                <small id="adrErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Residence type:</label>
-                <input type="text" class="form-control" name="residence type" id="rT">
-                <small id="rTErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Years spent in the area:</label>
-                <input type="number" class="form-control" name="time" id="tsa">
-                <small id="tsaErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Ward:</label>
-                <input type="text" class="form-control" name="ward" id="wd">
-                <small id="wdErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Activities carried out:</label>
-                <input type="text" class="form-control" name="activites" id="act">
-                <small id="actErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Date of registration:</label>
-                <input type="date" class="form-control" name="dreg" id="dr">
-                <small id="drErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Unique number:</label>
-                <input type="number" class="form-control" name="unique number" id="uN">
-                <small id="uNErr"></small>
-              </div>
-              <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" name="password">
-                <small id="pwdErr"></small>
-              </div>
-              <div class="checkbox">
-                <label><input type="checkbox"> Remember me</label>
-              </div>
+            <h4>Farmer One register</h4>
+            <form class="reg" id="regform" action="#" onsubmit="return validate (event)" method="post">
+              <fieldset>
+                <legend>Bio Data</legend>
+                <div class="form-group">
+                  <label>First name:</label>
+                  <input type="text" class="form-control" name="firstname" id="fName">
+                  <small id="fNameErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Second name:</label>
+                  <input type="text" class="form-control" name="secondname" id="sName">
+                  <small id="sNameErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Date of birth:</label>
+                  <input type="date" class="form-control" name="dob" id="db">
+                  <small id="dbErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Gender:</label>
+                  <label class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="gender" id="male" value="male"><span>Male</span>
+                  </label>
+                  <label class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="gender" id="female"
+                      value="female"><span>Female</span>
+                  </label>
+                  <small id="gndErr"></small>
+                </div>
+              </fieldset>
+              <fieldset>
+                <legend>Authentication</legend>
+                <div class="form-group">
+                  <label>Unique number:</label>
+                  <input type="number" class="form-control" name="unique number" id="uN">
+                  <small id="uNErr"></small>
+                </div>
+                <div class="form-group">
+                  <label for="pwd">Password:</label>
+                  <input type="password" class="form-control" id="pwd" name="password">
+                  <small id="pwdErr"></small>
+                </div>
+              </fieldset>
+              <fieldset>
+                <legend>Other</legend>
+                <div class="form-group">
+                  <label>Phone number:</label>
+                  <input type="text" class="form-control" name="phone number" id="pNum">
+                  <small id="pNumErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>NIN:</label>
+                  <input type="text" class="form-control" name="NIN" id="nin">
+                  <small id="ninErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Address</label>
+                  <input type="text" class="form-control" name="address" id="adr">
+                  <small id="adrErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Residence type:</label>
+                  <input type="text" class="form-control" name="residence type" id="rT">
+                  <small id="rTErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Years spent in the area:</label>
+                  <input type="number" class="form-control" name="time" id="tsa">
+                  <small id="tsaErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Ward:</label>
+                  <input type="text" class="form-control" name="ward" id="wd">
+                  <small id="wdErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Activities carried out:</label>
+                  <input type="text" class="form-control" name="activites" id="act">
+                  <small id="actErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Date of registration:</label>
+                  <input type="date" class="form-control" name="dreg" id="dr">
+                  <small id="drErr"></small>
+                </div>
+              </fieldset>
+              <div class="button">
               <button id="submit" class="btn btn-primary btn-block">Submit</button>
+              </div>
             </form>
           </div>
         </div>
       </div>
     </div>
-      <!-- footer starts here -->
-      <div w3-include-html="/includes/footer.html"></div>
-      <!-- footer ends here -->
+    <!-- footer starts here -->
+    <div w3-include-html="/includes/footer.html"></div>
+    <!-- footer ends here -->
   </div>
   <script src="/bootstrap/js/bootstrap.js"></script>
   <script src="/js/fOnevalidate.js"></script>
